# PaCman-1

./: .vscode.7z  CMakeLists.txt  README.md  main.c  main2.c  paCman.7z
.github/workflows/: cmake-multi-platform.yml
include/: eventHandler.h
src/: barrieres.c  barrieres.h  eventHandler.c  main2.h
